--- a/lang/en.json
+++ b/lang/en.json
@@ -14,6 +14,7 @@
     "VIRTUE": "Virtue",
     "ADD_KNACK": "Add Knack",
     "ADD_BOON": "Add Boon",
+    "ADD_WEAPON": "Add Weapon",
     "DESCRIPTION": "Description",
     "BOON_NAME": "Boon Name",
     "BOON_LEVEL": "Boon Level",
@@ -29,12 +30,13 @@
     "WEAPON_NAME": "Weapon Name",
     "WEAPON_ATACK": "Weapon Attack",
     "DAMAGE_VALUE": "Weapon Damage",
+    "DAMAGE_TYPE": "Damage Type",
     "RANGE": "Range",
     "SPEED": "Speed",
     "ACCURACY": "Accuracy",
     "DEFENSE": "Defense",
     "DAMAGE_ATTRIBUTE": "Damage Attribute",
-    "ATACK": "Attack",
+    "ATTACK": "Attack",
     "DAMAGE": "Damage",
     "POINTS": "Points",
     "JOIN_BATTLE": "Join Battle",
@@ -47,9 +49,9 @@
     "CHOOSE_PANTHEON": "Choose Pantheon",
     "YES": "Yes",
     "NO": "No",
-    "ATTRIBUTES_ABILITIES": "Attributes and Abilities",
-    "BIRTHRIGHTS_VIRTUES": "Birthrights and Virtues",
-    "KNACKS_BOONS": "Knacks and Boons",
+    "ATTRIBUTES_ABILITIES": "Attributes & Abilities",
+    "BIRTHRIGHTS_VIRTUES": "Birthrights & Virtues",
+    "KNACKS_BOONS": "Knacks & Boons",
     "COMBAT": "Combat",
     "TICK_DIRECTION": "Tick Direction",
     "STEP": "Step",
@@ -60,7 +62,10 @@
     "CRITICAL_FAIL": "Critical Failure",
     "NORMAL_SUCCESSES": "Normal Successes",
     "EPIC_ATTRIBUTE": "Epic Attribute",
-    "TOTAL_RESULT": "Total Result"
+    "TOTAL_RESULT": "Total Result",
+    "ATTRIBUTE": "Attribute",
+    "SKILLS": "Skills",
+    "HEALTH": "Health"
   },
   "STATS": {
     "ATTRIBUTES": "Attributes",
@@ -70,14 +75,16 @@
     "KNACKS": "Knacks",
     "BOONS": "Boons",
     "WEAPONS": "Weapons",
-    "WILLPOWER_LEGEND": "Willpower and Legend",
-    "COMBAT_SOAK_ARMOR": "Combat, Soak, and Armor",
+    "WILLPOWER_LEGEND": "Willpower & Legend",
+    "COMBAT_SOAK_ARMOR": "Combat, Soak & Armor",
     "DEFENSE_VALUES": "Defense Values",
     "ARMOR": "Armor",
     "SOAK": "Soak",
     "DODGE": "Dodge",
     "PARRY": "Parry",
-    "EXPERIENCE": "Experience"
+    "EXPERIENCE": "Experience",
+    "WILLPOWER": "Willpower",
+    "LEGEND": "Legend"
   },
   "ATTRIBUTE_TYPES": {
     "PHYSICAL": "Physical",
